cosmetic changes on deprecated constructors